# isaaclab_custom_ext

./: README.md  pyproject.toml
isaaclab_custom_ext/: __init__.py  flat_env_cfg.py  rough_env_1_cfg.py  rough_env_cfg.py
isaaclab_custom_ext/agents/: rsl_rl_ppo_cfg.py
isaaclab_custom_ext/custom_env/: __init__.py  commands.py  curriculum_cfg.py  event_cfg.py  objects.py  scene.py
isaaclab_custom_ext/custom_env_0/: rough_env_cfg.py
isaaclab_custom_ext/custom_env_1/: flat_env_1_cfg.py  rough_env_1_cfg.py
isaaclab_custom_ext/custom_env_2/: commands.py  custom_event_cfg.py  custom_observations_cfg.py  custom_rewards_cfg.py  custom_scene_cfg.py  custom_velocity_env_cfg.py  events.py  flat_env_2_cfg.py  objects.py  observations.py  rewards.py  rough_env_2_cfg.py  terminations_cfg.py
isaaclab_custom_ext/custom_env_3/: custom_commands_cfg.py  custom_event_cfg.py  custom_observations_cfg.py  custom_rewards_cfg.py  custom_scene_cfg.py  flat_env_3_cfg.py  objects.py  rough_env_3_cfg.py
isaaclab_custom_ext/registration/: __init__.py
isaaclab_custom_ext/scripts/: run_play_with_ext.py  run_train_with_ext.py
isaaclab_custom_ext/source/isaaclab_tasks/: __init__.py
isaaclab_custom_ext/source/isaaclab_tasks/manager_based/locomotion/velocity/: velocity_env_cfg.py
isaaclab_custom_ext/source/isaaclab_tasks/manager_based/locomotion/velocity/config/go1/: __init__.py  (+1 more)
isaaclab_custom_ext/unitree_g1_23dof/: asset_unitree_g1_23dof.py
isaaclab_custom_ext/utils/: nn_arch.py
scripts/: check_workers.sh  install_inside_container.sh  run_isaacsim_docker.sh  run_train_with_ext.py
(+8 files in other folders)
